2008-01-14i  Martin Leidig  <mleidig@schlund.de>

	Removed the authentication flag. The Authentication object is
	considered as being always authenticated (found no use case for
	need of explicit control).

	* src/de/schlund/pfixcore/auth/Authentication.java
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java
	* src/de/schlund/pfixcore/workflow/ContextImpl.java
	* src/de/schlund/pfixcore/example/bank/ihandler/LoginHandler.java

	* projects/core/schema/properties200401.xsd: Added default attribute
	definition for authconstraint elements.

	* de/schlund/pfixxml/config/impl/ContextConfigImpl.java: Added check
	for circular authpage references and context authpage after reading
	in configuration (now authpages aren't allowed to have authconstraints
	which have the page itself as direct or indirect authpage, also a
	Context's authpage isn't allowed to be used as authconstraint authpage.

2008-01-14  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/ResultDocument.java: addObject(Element element, 
	String name, Object object) now returns the newly-created element instead 
	of the passed element.

2008-01-07  Martin Leidig  <mleidig@schlund.de>

	Improved file change detection of apt task by saving timestamp file of
	last apt run.
	Added automatic Caster configuration for builtin types.

	Modified:
	* src/de/schlund/pfixcore/generator/iwrpgen/IWrapperFileScanner.java
	* src/de/schlund/pfixcore/generator/iwrpgen/IWrapperAnnotationProcessor.java
	* src/de/schlund/pfixcore/generator/iwrpgen/AptTask.java

2008-01-07  Martin Leidig  <mleidig@schlund.de>

	Changed serialization format: use derived classname as element 
	name for Map/Array/Collection entries.
	Added classname mapping customization support via @ClassNameAlias 
	annotation.
	Added XPath reference generation support to XMLWriter and 
	SerializationContext, which allows circular dependencies to be 
	serialized as xpathref attributes containing XPath expressions 