@@ -26,6 +26,7 @@ import org.xml.sax.Attributes;
 import de.schlund.pfixcore.auth.AuthConstraint;
 import de.schlund.pfixcore.auth.AuthConstraintImpl;
 import de.schlund.pfixcore.auth.Condition;
+import de.schlund.pfixcore.auth.Role;
 import de.schlund.pfixcore.auth.conditions.And;
 import de.schlund.pfixcore.auth.conditions.ConditionGroup;
 import de.schlund.pfixcore.auth.conditions.HasRole;
@@ -37,41 +38,46 @@ import de.schlund.pfixcore.auth.conditions.Or;
  */
 public class ConditionRule extends CheckedRule {
 
+    ContextXMLServletConfigImpl config;
+
     public ConditionRule(ContextXMLServletConfigImpl config) {
+        this.config = config;
     }
 
     public void begin(String namespace, String name, Attributes attributes) throws Exception {
         check(namespace, name, attributes);
-        Condition condition=null;
-        if(name.equals("or")) {
-        	condition=new Or();
-        } else if(name.equals("and")) {
-        	condition=new And();
-        } else if(name.equals("not")) {
-        	condition=new Not();
-        } else if(name.equals("hasrole")) {
-        	String role=attributes.getValue("name");
-        	condition=new HasRole(role);
-        } else throw new Exception("Unsupported condition: "+name);
+        Condition condition = null;
+        if (name.equals("or")) {
+            condition = new Or();
+        } else if (name.equals("and")) {
+            condition = new And();
+        } else if (name.equals("not")) {
+            condition = new Not();
+        } else if (name.equals("hasrole")) {
+            String roleName = attributes.getValue("name");
+            condition = new HasRole(roleName);
+            Role role = config.getContextConfig().getRole(roleName);
+            if (role == null) throw new Exception("Condition hasrole references unknown role: " + roleName);
+        } else throw new Exception("Unsupported condition: " + name);
         Object obj = getDigester().peek();
-        if(obj instanceof AuthConstraint) {
-        	((AuthConstraintImpl)obj).setCondition(condition);
-        } else if(obj instanceof ConditionGroup) {
-        	((ConditionGroup)obj).add(condition);
-        } else if(obj instanceof Not) {
-        	((Not)obj).set(condition);
-        } else throw new Exception("Illegal object: "+obj.getClass().getName());
+        if (obj instanceof AuthConstraint) {
+            ((AuthConstraintImpl) obj).setCondition(condition);
+        } else if (obj instanceof ConditionGroup) {
+            ((ConditionGroup) obj).add(condition);
+        } else if (obj instanceof Not) {
+            ((Not) obj).set(condition);
+        } else throw new Exception("Illegal object: " + obj.getClass().getName());
         getDigester().push(condition);
     }
-    
+
     public void end(String namespace, String name) throws Exception {
         getDigester().pop();
     }
-    
+
     protected Map<String, Boolean> wantsAttributes() {
         HashMap<String, Boolean> atts = new HashMap<String, Boolean>();
         atts.put("name", false);
         return atts;
     }
-    
+
 }
