@@ -1,4 +1,15 @@
-2008-01-14i  Martin Leidig  <mleidig@schlund.de>
+2008-01-16  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
+	Added dynamic check for circular authpage references, prohibit context
+	authpage to be used as authconstraint authpage
+	* src/de/schlund/pfixxml/config/impl/ConditionRule.java: throw
+	exception if 'hasrole' references non-existing role
+	* src/de/schlund/pfixxml/config/impl/ContextConfigImpl.java: Disable
+	loadtime check of authconstraints by default (new runtime checks
+	suffice)
+
+2008-01-14  Martin Leidig  <mleidig@schlund.de>
 
 	Removed the authentication flag. The Authentication object is
 	considered as being always authenticated (found no use case for
